// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Alignment 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Align Left
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-center"
          role="columnheader"
          scope="col"
        >
          <div>
            Align center
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-right"
          role="columnheader"
          scope="col"
        >
          <div>
            Align right
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Delmer
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-center"
          role="gridcell"
        >
          Schaefer
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-right"
          role="gridcell"
        >
          Mathilde2@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Liliane
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-center"
          role="gridcell"
        >
          Heaney
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-right"
          role="gridcell"
        >
          Fabian_Reichel@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Noemy
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-center"
          role="gridcell"
        >
          Baumbach
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-right"
          role="gridcell"
        >
          Jerrell.Hackett@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Alexandrea
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-center"
          role="gridcell"
        >
          Haley
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-right"
          role="gridcell"
        >
          Wilson.Jakubowski@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Constance
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-center"
          role="gridcell"
        >
          Kutch
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-right"
          role="gridcell"
        >
          Coy87@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Basic 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Jorge
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          O'Connell
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Silas.Will@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Enrico
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          VonRueden
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Helen_Schmeler@yahoo.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Brittany
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Leuschke
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Yasmeen49@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Eva
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Jacobs
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Birdie0@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            Erich
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Dach
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Hubert_Welch@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Mixed Content 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                className="psds-avatar psds-avatar--size-xsmall"
              >
                <div
                  aria-label="Baron"
                  className="psds-avatar__initials"
                  style={
                    Object {
                      "backgroundColor": "#7048C6",
                    }
                  }
                >
                  B
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Baron
              </span>
            </div>
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Beer
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Derrick_Raynor@yahoo.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                className="psds-avatar psds-avatar--size-xsmall"
              >
                <div
                  aria-label="Ignacio"
                  className="psds-avatar__initials"
                  style={
                    Object {
                      "backgroundColor": "#D1487B",
                    }
                  }
                >
                  I
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Ignacio
              </span>
            </div>
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Swift
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Hans.Marquardt@yahoo.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                className="psds-avatar psds-avatar--size-xsmall"
              >
                <div
                  aria-label="Edwina"
                  className="psds-avatar__initials"
                  style={
                    Object {
                      "backgroundColor": "#009380",
                    }
                  }
                >
                  E
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Edwina
              </span>
            </div>
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Predovic
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Damaris_Wilderman@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                className="psds-avatar psds-avatar--size-xsmall"
              >
                <div
                  aria-label="Devante"
                  className="psds-avatar__initials"
                  style={
                    Object {
                      "backgroundColor": "#CB670B",
                    }
                  }
                >
                  D
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Devante
              </span>
            </div>
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Schuppe
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Kris_Parker@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                className="psds-avatar psds-avatar--size-xsmall"
              >
                <div
                  aria-label="Skylar"
                  className="psds-avatar__initials"
                  style={
                    Object {
                      "backgroundColor": "#CB670B",
                    }
                  }
                >
                  S
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Skylar
              </span>
            </div>
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Gust.Hodkiewicz@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Row Selection 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            <label
              className="psds-checkbox"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
              >
                <input
                  className="psds-screenreader-only psds-checkbox__input"
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
                >
                  <svg
                    aria-label="Indeterminate Mark"
                    className="psds-checkbox__icon"
                    role="img"
                    version="1.1"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="2"
                      width="10"
                      x="3"
                      y="7"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="psds-checkbox__label psds-theme--dark"
              />
            </label>
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Delphine
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Huel
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Forest_Lind@yahoo.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row psds-table__row--selected"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={true}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
              >
                <svg
                  aria-label="Checkmark"
                  className="psds-checkbox__icon"
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Brittany
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Hirthe
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Efrain_Gerhold71@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Geovany
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Franecki
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Nathanael.Wolff9@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Ena
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Boyle
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Luna.Christiansen@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row psds-table__row--selected"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={true}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
              >
                <svg
                  aria-label="Checkmark"
                  className="psds-checkbox__icon"
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Emil
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Willms
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Lura_Pouros95@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Monique
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Reilly
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Rhoda_Botsford43@gmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Araceli
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Huels
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Hailey33@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row psds-table__row--selected"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={true}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark psds-checkbox__square--active"
              >
                <svg
                  aria-label="Checkmark"
                  className="psds-checkbox__icon"
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Nathan
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Becker
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Thad33@yahoo.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Maximillian
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          McKenzie
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Julius87@hotmail.com
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <label
            className="psds-checkbox"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
            >
              <input
                checked={false}
                className="psds-screenreader-only psds-checkbox__input"
                readOnly={true}
                type="checkbox"
              />
              <div
                className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
              />
            </div>
            <div
              className="psds-checkbox__label psds-theme--dark"
            />
          </label>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Brad
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Lang
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Flavio.Morar82@gmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Sorting 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    aria-labelledby="test-caption-id"
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <caption
      aria-live="polite"
      id="test-caption-id"
    >
      <div
        data-css-6wu9td=""
      >
        Mock table title: Not sorted
      </div>
    </caption>
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          aria-label="First name: No sort applied"
          aria-sort="none"
          className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sortable"
          data-header-id="h-first-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="First name"
        >
          <div>
            First name
            <div
              aria-hidden={true}
              className="psds-icon psds-icon--size-medium psds-icon--color-undefined psds-table__header__sort-icon"
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
        <th
          aria-label="Last name: No sort applied"
          aria-sort="none"
          className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sortable"
          data-header-id="h-last-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Last name"
        >
          <div>
            Last name
            <div
              aria-hidden={true}
              className="psds-icon psds-icon--size-medium psds-icon--color-undefined psds-table__header__sort-icon"
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
        <th
          aria-label="Email: No sort applied"
          aria-sort="none"
          className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sortable"
          data-header-id="h-email"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Email"
        >
          <div>
            Email
            <div
              aria-hidden={true}
              className="psds-icon psds-icon--size-medium psds-icon--color-undefined psds-table__header__sort-icon"
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="rowheader"
          scope="row"
          title="First name"
        >
          <div>
            Era
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Dooley
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Schuyler_MacGyver50@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/drawer Left Indented 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Adolphus
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Donnelly
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Braulio_Rempel33@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={3}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Krystal
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          MacGyver
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Kacey7@yahoo.com
        </td>
      </tr>
      <tr
        aria-hidden={false}
        className="psds-table__drawer psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={3}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Aglae
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Vivianne.Johnson79@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={3}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Vladimir
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          White
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Beaulah_Douglas@yahoo.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={3}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Hillard
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Bauch
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Michelle_OConnell58@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={3}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/drawer Right Not Indented 1`] = `
<div
  className="psds-theme--dark psds-table__container"
>
  <table
    className="psds-table psds-theme--dark"
    role="grid"
  >
    <thead
      className="psds-table__head psds-theme--dark"
    >
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          className="psds-theme--dark psds-table__header psds-table__header--align-left"
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        />
      </tr>
    </thead>
    <tbody>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Darien
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Romaguera
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Kathryn91@gmail.com
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={4}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Libby
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Treutel
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Rogelio.Kuhic@hotmail.com
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={false}
        className="psds-table__drawer psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={4}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Myrna
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Bernier
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Bridget23@yahoo.com
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={4}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Darrell
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Stamm
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Bruce_Bartell@gmail.com
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={4}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        className="psds-theme--dark psds-table__row"
        role="row"
      >
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Damon
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Goyette
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          Luisa.Nader53@yahoo.com
        </td>
        <td
          className="psds-table__cell psds-table__cell--align-left"
          role="gridcell"
        >
          <button
            className="psds-button psds-button--layout-inline psds-button--size-xsmall psds-button--appearance-flat psds-theme--dark psds-button--icon-only"
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              className="psds-button__icon psds-button__icon--icon-align-left psds-button__icon--size-xSmall psds-button__icon--icon-only"
            >
              <div
                className="psds-icon psds-icon--size-xSmall psds-icon--color-undefined"
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              className="psds-button__text"
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        className="psds-table__drawer psds-theme--dark psds-table__row psds-table__row--collapsed"
        role="row"
      >
        <td
          className="psds-table__drawer__cell psds-table__cell psds-table__cell--align-left"
          colSpan={4}
          role="gridcell"
        >
          <div
            className="psds-table__drawer__inner"
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/responsive Horizontal Scroll 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    className="psds-theme--dark psds-table__container psds-table__container--scrollable"
    role="region"
    tabIndex={0}
  >
    <table
      className="psds-table psds-theme--dark"
      role="grid"
    >
      <thead
        className="psds-table__head psds-theme--dark"
      >
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            <label
              className="psds-checkbox"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
              >
                <input
                  className="psds-screenreader-only psds-checkbox__input"
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                />
              </div>
              <div
                className="psds-checkbox__label psds-theme--dark"
              />
            </label>
          </td>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="col"
            title="Full name"
          >
            <div>
              Full name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="col"
            title="First name"
          >
            <div>
              First name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="col"
            title="Last name"
          >
            <div>
              Last name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="col"
            title="Email"
          >
            <div>
              Email
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Frederick
               
              Lindgren
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Frederick
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Lindgren
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Jaycee_Rice@yahoo.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Gerard
               
              Frami
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Gerard
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Frami
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Cicero_Hartmann90@gmail.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Virgie
               
              Satterfield
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Virgie
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Satterfield
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Ron54@hotmail.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Eino
               
              Homenick
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Eino
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Homenick
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Delta_Yost13@hotmail.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Luella
               
              Kirlin
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Luella
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Kirlin
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Addison_Bins@hotmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/responsive Sticky Row Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    className="psds-theme--dark psds-table__container psds-table__container--scrollable"
    role="region"
    tabIndex={0}
  >
    <table
      className="psds-table psds-theme--dark"
      role="grid"
    >
      <thead
        className="psds-table__head psds-theme--dark"
      >
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="columnheader"
            scope="row"
            style={
              Object {
                "width": 1,
              }
            }
            title="Selection"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              Full name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              First name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              Last name
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="columnheader"
            scope="row"
          >
            <div>
              Email
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="rowheader"
            scope="row"
          >
            <div>
              Otilia
               
              Collins
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Otilia
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Collins
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Seamus.Hettinger46@yahoo.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="rowheader"
            scope="row"
          >
            <div>
              Baby
               
              Mayert
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Baby
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Mayert
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Karianne24@yahoo.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="rowheader"
            scope="row"
          >
            <div>
              Aisha
               
              VonRueden
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Aisha
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            VonRueden
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Mitchel.Parker@gmail.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="rowheader"
            scope="row"
          >
            <div>
              Lynn
               
              Runolfsdottir
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Lynn
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Runolfsdottir
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Vivienne.Jenkins@hotmail.com
          </td>
        </tr>
        <tr
          className="psds-theme--dark psds-table__row"
          role="row"
        >
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left psds-table__header--sticky"
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                className="psds-checkbox"
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  className="psds-halo psds-theme--dark psds-halo--shape-default psds-halo--gap-size-small psds-halo--inline psds-halo--visible-on-focus"
                >
                  <input
                    className="psds-screenreader-only psds-checkbox__input"
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    className="psds-checkbox__square psds-checkbox__square.psds-theme--dark"
                  />
                </div>
                <div
                  className="psds-checkbox__label psds-theme--dark"
                />
              </label>
            </div>
          </th>
          <th
            className="psds-theme--dark psds-table__header psds-table__header--align-left"
            role="rowheader"
            scope="row"
          >
            <div>
              Viva
               
              Sipes
            </div>
          </th>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Viva
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Sipes
          </td>
          <td
            className="psds-table__cell psds-table__cell--align-left"
            role="gridcell"
          >
            Haven2@hotmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
